<resources>
    <string name="app_name">ovo</string>
    <string name="floating_btn">floating button</string>

    <!-- navigation drawer -->
    <string name="user_name">User Name</string>
    <string name="user_email">useremail@gmail.com</string>
    <string name="nav_profile">關於我</string>
    <string name="nav_login">登入</string>
    <string name="nav_my_account">我的帳戶</string>
    <string name="nav_edit_photo">編輯頭像</string>
    <string name="nav_setting">設定</string>

    <!-- login dialog -->
    <string name="hint_user_name">使用者名稱</string>
    <string name="hint_email">帳號</string>
    <string name="hint_password">密碼</string>
    <string name="helper_password">請輸入8位以上的密碼</string>

    <!-- edit account page -->
    <string name="edit_name">姓名</string>
    <string name="edit_email">信箱</string>
    <string name="edit_sex">性別</string>
    <string name="edit_birthday">生日</string>
    <string name="edit_phone">手機號碼</string>
    <string name="edit_birth_hint">您的生日在甚麼時候呢(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧</string>
    <string name="edit_phone_hint">可以告訴我您的電話號碼嗎♪(^∇^*)</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- instruction dialog -->
    <string name="nothing_in_note">這裡什麼都沒有:D</string>
    <string name="delete_alert">確定要刪除此筆記？o ʌ o</string>
    <string name="delete_yes">刪掉吧!</string>
    <string name="delete_no">再想想..</string>
    <string name="help_title">⭐ 使用說明 0v0 ⭐</string>
    <string name="help_info">非常感謝您使用這款APP！\n\n以下為APP的使用說明\n若還有任何不了解的地方，歡迎您寄信給我們喔~</string>
    <string name="info_add_new_note">📌 新增筆記：點擊 🖌 來新增筆記</string>
    <string name="info_edit_note">📌 編輯筆記：單擊筆記以編輯筆記</string>
    <string name="info_delete_note">📌 刪除筆記：長按筆記以刪除筆記</string>
    <string name="info_save_note">📌 儲存筆記內容：點擊筆記編輯畫面右下方 ✔ 或者左上方返回鍵儲存筆記</string>
    <string name="info_drawer">📌 查看帳戶/登入選項：點擊畫面左上方選單</string>
    <string name="info_fab">📌 查看動作選項：點擊右下方浮動按鈕 ➕ 以查看更多動作</string>
    <string name="info_help">📌 查看使用說明：點擊 ❓ 以查看使用說明</string>

    <!-- camera -->
    <string name="no_camera">找不到相機x_x</string>
</resources>