<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_profile">
        <menu>
            <item
                android:id="@+id/nav_my_account"
                android:title="@string/nav_my_account"
                android:icon="@drawable/ic_account" />
            <item
                android:id="@+id/nav_edit_photo"
                android:title="@string/nav_edit_photo"
                android:icon="@drawable/ic_camera" />
        </menu>
    </item>

<!--    <item-->
<!--        android:id="@+id/nav_setting"-->
<!--        android:title="@string/nav_setting"-->
<!--        android:icon="@drawable/ic_settings" />-->
</menu>