<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/help_dialog_bg"
    android:padding="16dp" >


    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/help_title"
        android:textSize="20sp"
        android:textColor="@color/titleColor"/>

    <TextView
        android:id="@+id/help_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_title"
        android:layout_marginTop="30dp"
        android:text="@string/help_info"
        android:textColor="@color/titleColor"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_sub_title"
        android:layout_marginTop="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/info_add_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_fab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/info_edit_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_add_new_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_add_new_note"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/info_save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_save_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_edit_note"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/info_delete_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_edit_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_save_note"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/info_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_delete_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_delete_note"
            android:textColor="@color/titleColor"/>

        <TextView
            android:id="@+id/info_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_fab"
            android:textColor="@color/titleColor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>