<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="16dp">


    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/trashcan" />

    <TextView
        android:id="@+id/alertContent"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/deleteIcon"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_alert" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alertContent"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        >


        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_yes"
            android:textColor="#000000"
            app:backgroundTint="#ffffff" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/delete_no"
            android:textColor="#000000"
            app:backgroundTint="#ffffff"/>

    </LinearLayout>
</RelativeLayout>